--- a/app/css/light_theme.css
+++ b/app/css/light_theme.css
@@ -1,6 +1,9 @@
 html, body {
   background-color: white; }
 
+.app {
+  background-color: white; }
+
 #homePage .notebooks .notebook .description, #quicknotesPage .notebooks .notebook .description {
   color: #2b2b2b !important;
   background-color: #FAFAFA !important; }
