--- a/src/css/partials/_scrollbar.scss
+++ b/src/css/partials/_scrollbar.scss
@@ -1,85 +1,100 @@
 $grey: #ababab;
 
-#homePage::-webkit-scrollbar-track {
+.app::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: transparent;
 }
 
-#homePage::-webkit-scrollbar {
+.app::-webkit-scrollbar {
     width: 7px;
     background-color: transparent;
 }
 
-#homePage::-webkit-scrollbar-thumb {
+.app::-webkit-scrollbar-thumb {
     background-color: $grey;
 }
 
-#quicknotesPage::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: transparent;
-}
 
-#quicknotesPage::-webkit-scrollbar {
-    width: 7px;
-    background-color: transparent;
-}
+// #homePage::-webkit-scrollbar-track {
+//     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+//     background-color: transparent;
+// }
 
-#quicknotesPage::-webkit-scrollbar-thumb {
-    background-color: $grey;
-}
+// #homePage::-webkit-scrollbar {
+//     width: 7px;
+//     background-color: transparent;
+// }
 
-#settingsPage::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: transparent;
-}
+// #homePage::-webkit-scrollbar-thumb {
+//     background-color: $grey;
+// }
 
-#settingsPage::-webkit-scrollbar {
-    width: 7px;
-    background-color: transparent;
-}
+// #quicknotesPage::-webkit-scrollbar-track {
+//     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+//     background-color: transparent;
+// }
 
-#settingsPage::-webkit-scrollbar-thumb {
-    background-color: $grey;
-}
+// #quicknotesPage::-webkit-scrollbar {
+//     width: 7px;
+//     background-color: transparent;
+// }
 
-#notebookPage::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: transparent;
-}
+// #quicknotesPage::-webkit-scrollbar-thumb {
+//     background-color: $grey;
+// }
 
-#notebookPage::-webkit-scrollbar {
-    width: 7px;
-    background-color: transparent;
-}
+// #settingsPage::-webkit-scrollbar-track {
+//     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+//     background-color: transparent;
+// }
 
-#notebookPage::-webkit-scrollbar-thumb {
-    background-color: $grey;
-}
+// #settingsPage::-webkit-scrollbar {
+//     width: 7px;
+//     background-color: transparent;
+// }
 
-#writePage::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: transparent;
-}
+// #settingsPage::-webkit-scrollbar-thumb {
+//     background-color: $grey;
+// }
 
-#writePage::-webkit-scrollbar {
-    width: 7px;
-    background-color: transparent;
-}
+// #notebookPage::-webkit-scrollbar-track {
+//     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+//     background-color: transparent;
+// }
 
-#writePage::-webkit-scrollbar-thumb {
-    background-color: $grey;
-}
+// #notebookPage::-webkit-scrollbar {
+//     width: 7px;
+//     background-color: transparent;
+// }
 
-#editPage::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: transparent;
-}
+// #notebookPage::-webkit-scrollbar-thumb {
+//     background-color: $grey;
+// }
 
-#editPage::-webkit-scrollbar {
-    width: 7px;
-    background-color: transparent;
-}
+// #writePage::-webkit-scrollbar-track {
+//     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+//     background-color: transparent;
+// }
 
-#editPage::-webkit-scrollbar-thumb {
-    background-color: $grey;
-}
+// #writePage::-webkit-scrollbar {
+//     width: 7px;
+//     background-color: transparent;
+// }
+
+// #writePage::-webkit-scrollbar-thumb {
+//     background-color: $grey;
+// }
+
+// #editPage::-webkit-scrollbar-track {
+//     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+//     background-color: transparent;
+// }
+
+// #editPage::-webkit-scrollbar {
+//     width: 7px;
+//     background-color: transparent;
+// }
+
+// #editPage::-webkit-scrollbar-thumb {
+//     background-color: $grey;
+// }
