--- a/src/css/partials/_sidebar.scss
+++ b/src/css/partials/_sidebar.scss
@@ -3,7 +3,7 @@
     position: fixed;
     top: 0px;
     height: 100%;
-    // padding: 8px;
+    z-index: 200;
     background: $umbrella_primary;
     display: flex;
     flex-direction: column;
